--- a/app/src/main/res/layout/item_tv_movie_list.xml
+++ b/app/src/main/res/layout/item_tv_movie_list.xml
@@ -1,89 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="16dp">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="16dp">
 
     <ImageView
-            android:contentDescription="@string/movie_poster"
-            android:id="@+id/single_poster_img"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_width="90dp"
-            android:layout_height="120dp"/>
+        android:id="@+id/single_poster_img"
+        android:layout_width="90dp"
+        android:layout_height="120dp"
+        android:contentDescription="@string/movie_poster"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-            app:layout_constraintTop_toTopOf="@id/single_poster_img"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/single_poster_img"
-            android:id="@+id/single_title_textview"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            tools:text="@string/movie_title"
-            android:singleLine="false"
-            android:textStyle="bold"
-            android:layout_marginStart="20dp"
-            android:textSize="20sp"
-            android:textColor="@color/design_default_color_primary"/>
+        android:id="@+id/single_title_textview"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:singleLine="false"
+        android:textColor="@color/design_default_color_primary"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/single_poster_img"
+        app:layout_constraintTop_toTopOf="@id/single_poster_img"
+        tools:text="@string/movie_title" />
+
     <androidx.cardview.widget.CardView
-            android:id="@+id/single_card_vote_average"
-            app:layout_constraintLeft_toRightOf="@id/single_poster_img"
-            app:layout_constraintTop_toBottomOf="@id/single_title_textview"
-            android:layout_marginStart="20dp"
-            android:layout_width="wrap_content"
-            app:cardBackgroundColor="#55CCCCCC"
-            app:cardElevation="0dp"
-            app:cardCornerRadius="4dp"
-            android:layout_marginTop="10dp"
-            android:layout_height="wrap_content">
+        android:id="@+id/single_card_vote_average"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        app:cardBackgroundColor="#55CCCCCC"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="0dp"
+        app:layout_constraintLeft_toRightOf="@id/single_poster_img"
+        app:layout_constraintTop_toBottomOf="@id/single_title_textview">
+
         <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="3dp"
+            tools:ignore="UseCompoundDrawables">
+
+            <ImageView
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:layout_gravity="center"
+                android:layout_marginEnd="6dp"
+                android:contentDescription="@string/star_icon"
+                android:src="@drawable/ic_star_rate_black_24dp"
+                app:tint="@color/gold" />
+
+            <TextView
+                android:id="@+id/single_popularity_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingVertical="3dp"
-                android:paddingHorizontal="8dp"
-                tools:ignore="UseCompoundDrawables">
-            <ImageView android:layout_width="12dp"
-                       android:layout_height="12dp"
-                       android:layout_gravity="center"
-                       android:layout_marginEnd="6dp"
-                       android:src="@drawable/ic_star_rate_black_24dp"
-                       app:tint="@color/gold"
-                       android:contentDescription="@string/star_icon"/>
-            <TextView
-                    android:id="@+id/single_popularity_textview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:includeFontPadding="false"
-                    android:text="@string/rating_sample"
-                    android:textSize="12sp"/>
+                android:includeFontPadding="false"
+                android:text="@string/rating_sample"
+                android:textSize="12sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <TextView
-            app:layout_constraintLeft_toLeftOf="@id/single_card_vote_average"
-            app:layout_constraintTop_toBottomOf="@id/single_card_vote_average"
-            android:id="@+id/single_date_released_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:includeFontPadding="false"
-            android:text="@string/date_released"
-            android:textSize="12sp"
-            android:layout_marginEnd="2dp"/>
+        android:id="@+id/single_date_released_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="2dp"
+        android:includeFontPadding="false"
+        android:text="@string/date_released"
+        android:textSize="12sp"
+        app:layout_constraintLeft_toLeftOf="@id/single_card_vote_average"
+        app:layout_constraintTop_toBottomOf="@id/single_card_vote_average" />
+
     <TextView
-            app:layout_constraintTop_toBottomOf="@id/single_date_released_textview"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/single_poster_img"
-            android:id="@+id/single_genre_textview"
-            android:singleLine="false"
-            android:layout_width="0dp"
-            android:layout_marginStart="20dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:includeFontPadding="false"
-            android:text="@string/genre"
-            android:textSize="12sp"
-            android:layout_marginEnd="2dp"/>
+        android:id="@+id/single_genre_textview"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="2dp"
+        android:includeFontPadding="false"
+        android:singleLine="false"
+        android:text="@string/genre"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/single_poster_img"
+        app:layout_constraintTop_toBottomOf="@id/single_date_released_textview" />
 </androidx.constraintlayout.widget.ConstraintLayout>
