--- a/core/src/main/res/layout/item_tv_movie_list.xml
+++ b/core/src/main/res/layout/item_tv_movie_list.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:singleLine="false"
-        android:textColor="@color/design_default_color_primary"
+        android:textColor="@color/purple_500"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
