--- a/core/src/main/res/layout/item_tv_movie_list.xml
+++ b/core/src/main/res/layout/item_tv_movie_list.xml
@@ -67,6 +67,36 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/single_card_category"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        app:cardBackgroundColor="#55CCCCCC"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="0dp"
+        app:layout_constraintLeft_toRightOf="@id/single_card_vote_average"
+        app:layout_constraintTop_toBottomOf="@id/single_title_textview">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="3dp"
+            tools:ignore="UseCompoundDrawables">
+
+            <TextView
+                android:id="@+id/single_category_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:text="@string/movie"
+                android:textSize="12sp" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
     <TextView
         android:id="@+id/single_date_released_textview"
         android:layout_width="wrap_content"
