--- a/favorite/src/main/res/layout/activity_favorite.xml
+++ b/favorite/src/main/res/layout/activity_favorite.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guide_left"
@@ -52,15 +52,17 @@
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fav_title"
-        tools:text="@string/movie" />
+        android:text="@string/movie" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="10dp"
+        android:paddingEnd="24dp"
         app:layout_constraintTop_toBottomOf="@id/fav_title_movie"
         app:layout_constraintLeft_toRightOf="@id/guide_left"
         android:id="@+id/fav_rv_movie"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        tools:ignore="RtlSymmetry" />
 
     <TextView
         android:layout_marginTop="20dp"
@@ -77,10 +79,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="10dp"
+        android:paddingEnd="24dp"
         app:layout_constraintTop_toBottomOf="@id/fav_title_tvshow"
         app:layout_constraintLeft_toRightOf="@id/guide_left"
         android:id="@+id/fav_rv_tv"
         android:layout_width="0dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        tools:ignore="RtlSymmetry" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
